scrollbar, card fix, footer fix

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -17,3 +17,16 @@ body {
 	background-position: 50%;
 	background-size: cover, 20%;
 }
+
+body::-webkit-scrollbar {
+	width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px #151515;
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: $color-500;
+	border-radius: 50rem;
+}
