--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -59,6 +59,7 @@
 	&__text {
 		position: relative;
 		font-weight: 500;
+		pointer-events: none;
 	}
 
 	&__border-radius {
