--- a/src/scss/sections/_features.scss
+++ b/src/scss/sections/_features.scss
@@ -20,6 +20,8 @@
 	}
 
 	&__box-content {
+		height: 100%;
+		width: 100%;
 		padding: 3rem;
 		display: flex;
 		flex-direction: column;
